# mastercinator

./: .env.example  Dockerfile  agent.py  demo.py  main.py  pyproject.toml  requirements.txt  results.json  tasks.json
app/: config.py  executors.py  logger.py  main.py  manager.py
audio/: ambient.py  detector.py  music.py  whisper.py
display/: console.py  json_view.py
fusion/: merger.py  timeline.py
llm/: prompts.py  summarize.py
media/: downloader.py  ffmpeg.py
pipelines/: modular.py  qwen_direct.py
schemas/: audio.py  result.py  timeline.py  vision.py
vision/: actions.py  frames.py  ocr.py  scenes.py  vlm.py
