[project]
name = "mastercinator"
version = "0.1.0"
description = "Local Video Intelligence Prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "pillow>=10.0.0",
    "streamlit>=1.59.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "app",
    "schemas",
    "pipelines",
    "media",
    "vision",
    "fusion",
    "audio",
    "llm",
    "display"
]
